exports[`invalid(1): {\"exports\": {\"module\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"exports": {"module": "./index.js"}}

`;

exports[`invalid(1): {\"exports\": {\"module\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"exports": {"module": "./index.js"}}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field so bundlers can optimize unused modules.

`;

exports[`invalid(2): {\"exports\": {\"./feature\": {\"browser\": \"./browser.js\"}}} 1`] = `

[Input]
  1 | {"exports": {"./feature": {"browser": "./browser.js"}}}

`;

exports[`invalid(2): {\"exports\": {\"./feature\": {\"browser\": \"./browser.js\"}}} 2`] = `

Message:
> 1 | {"exports": {"./feature": {"browser": "./browser.js"}}}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field so bundlers can optimize unused modules.

`;

exports[`invalid(3): {\"exports\": \"./index.js\", \"imports\": {\"#feature\": {\"module\": \"./module.js\"}}} 1`] = `

[Input]
  1 | {"exports": "./index.js", "imports": {"#feature": {"module": "./module.js"}}}

`;

exports[`invalid(3): {\"exports\": \"./index.js\", \"imports\": {\"#feature\": {\"module\": \"./module.js\"}}} 2`] = `

Message:
> 1 | {"exports": "./index.js", "imports": {"#feature": {"module": "./module.js"}}}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field so bundlers can optimize unused modules.

`;

exports[`invalid(4): {\"exports\": \"./index.js\", \"imports\": {\"#feature\": {\"browser\": \"./browser.js\"}}} 1`] = `

[Input]
  1 | {"exports": "./index.js", "imports": {"#feature": {"browser": "./browser.js"}}}

`;

exports[`invalid(4): {\"exports\": \"./index.js\", \"imports\": {\"#feature\": {\"browser\": \"./browser.js\"}}} 2`] = `

Message:
> 1 | {"exports": "./index.js", "imports": {"#feature": {"browser": "./browser.js"}}}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field so bundlers can optimize unused modules.

`;

exports[`invalid(5): {\"exports\": [{\"./feature\": {\"browser\": \"./browser.js\"}}]} 1`] = `

[Input]
  1 | {"exports": [{"./feature": {"browser": "./browser.js"}}]}

`;

exports[`invalid(5): {\"exports\": [{\"./feature\": {\"browser\": \"./browser.js\"}}]} 2`] = `

Message:
> 1 | {"exports": [{"./feature": {"browser": "./browser.js"}}]}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field so bundlers can optimize unused modules.

`;

exports[`invalid(6): {\"private\": true, \"exports\": {\"module\": \"./index.js\"}} 1`] = `

[Input]
  1 | {"private": true, "exports": {"module": "./index.js"}}

`;

exports[`invalid(6): {\"private\": true, \"exports\": {\"module\": \"./index.js\"}} 2`] = `

Message:
> 1 | {"private": true, "exports": {"module": "./index.js"}}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Declare a \`sideEffects\` field so bundlers can optimize unused modules.

`;
